      audits/passive/profiler/sources/main.py
      audits/passive/tcp/sources/main.py
      audits/passive/udp/sources/main.py
      audits/passive/wifi/sources/main.py:
        - Adding description and references.
        - Wifi decoder fixed.
    * PM/share/locale/it/it.po
      PM/share/locale/packetmanipulator.pot
      PM/share/locale/it/LC_MESSAGES/packetmanipulator.mo:
        - Updated catalog and it translation.
    * PM/Gui/Core/MainWindow.py:
        - Codename changed.
    * PM/Backend/Scapy/translator.py:
        - Add radiotap and wifi protocol aliases.
    * setup.py
      scripts/windows/setup.py:
        - Including generation and building of plugins.
    * PM/Backend/Scapy/wrapper.py:
        - Using more reasonable message to warng of scapy missing.
        - Patch select only on posix systems.
    * PM/PacketManipulator:
        - Fixing launcher.
    * MANIFEST.in:
        - Include missing pixmaps.

    - End user Audits framework documentation added.

2009-08-15 Francesco Piccinno <stack.box@gmail.com>
    * audits/passive/tcp/sources/main.py:
        - Fixing debug messages.
    * audits/active/arpping/sources/main.py:
        - Adding a new functionality to scan the current network segment for
          the presence of active hosts using ARP ping packets. This could be
          used by pressing scan button inside HostListTab.
        - Now ARPPing is an operation like the rest of plugins.
        - Messages are printed directly into AuditOutputPage.
    * audits/active/icmpredirect/sources/main.py:
        - Fixing wrong constants use.
    * audits/active/injector/sources/main.py:
        - Fixing various bugs in injector.
    * audits/active/synflood/sources/main.py:
        - Fixed message.
    * MANIFEST.in:
        - Updated to respect the new structure.
    * PM/Gui/Pages/AuditOutputPage.py:
        - Checking for log file overwrite.
        - Fixing a bug in button-press event handler.