@@ -165,6 +165,8 @@ import token
 import tokenize
 import operator
 
+from PM.Core.Const import PM_VERSION
+
 __version__ = '1.5'
 
 default_keywords = ['_']
@@ -177,20 +179,20 @@ EMPTYSTRING = ''
 # The normal pot-file header. msgmerge and Emacs's po-mode work better if it's
 # there.
 pot_header = _('''\
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR ORGANIZATION
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# PacketManipulator catalog.
+# Copyright (C) 2009 Adriano Montero Marques
+# Francesco Piccinno <stack.box@gmail.com>, 2009
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\\n"
+"Project-Id-Version: PacketManipulator %(pm_version)s\\n"
 "POT-Creation-Date: %(time)s\\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\\n"
 "Language-Team: LANGUAGE <LL@li.org>\\n"
 "MIME-Version: 1.0\\n"
-"Content-Type: text/plain; charset=CHARSET\\n"
-"Content-Transfer-Encoding: ENCODING\\n"
+"Content-Type: text/plain; charset=UTF-8\\n"
+"Content-Transfer-Encoding: 8bit\\n"
 "Generated-By: pygettext.py %(version)s\\n"
 
 ''')
@@ -448,7 +450,8 @@ class TokenEater:
         timestamp = time.strftime('%Y-%m-%d %H:%M+%Z')
         # The time stamp in the header doesn't have the same format as that
         # generated by xgettext...
-        print >> fp, pot_header % {'time': timestamp, 'version': __version__}
+        print >> fp, pot_header % {'time': timestamp, 'version': __version__,
+                                   'pm_version': PM_VERSION}
         # Sort the entries.  First sort each particular entry's keys, then
         # sort all the entries by their first item.
         reverse = {}
